--- a/index.html
+++ b/index.html
@@ -12,14 +12,29 @@
     #map { width: 100%; height: 100%; }
 
     .custom-marker {
-      width: 100px;
-      height: 100px;
+      width: 75px;
+      height: 75px;
+      background: none;
+      pointer-events: auto;
+    }
+
+    .marker-inner {
+      width: 100%;
+      height: 100%;
       background-size: contain;
       background-repeat: no-repeat;
       background-position: center;
-      border: none;
-      border-radius: 0;
-      pointer-events: auto;
+      transform-origin: bottom center;
+      will-change: transform;
+    }
+
+    @keyframes bounce {
+      0%, 100% { transform: translateY(0); }
+      50% { transform: translateY(-12px); }
+    }
+
+    .bounce {
+      animation: bounce 0.6s infinite;
     }
 
     .mapboxgl-popup-content {
@@ -60,18 +75,23 @@
     style: {
       version: 8,
       sources: {},
-      layers: [
-        {
-          id: 'background',
-          type: 'background',
-          paint: { 'background-color': '#448e7a' }
-        }
-      ]
+      layers: [{
+        id: 'background',
+        type: 'background',
+        paint: { 'background-color': '#448e7a' }
+      }]
     },
     center: [126.8355, 37.5700],
     zoom: 15,
     bearing: 314
   });
+
+  let isUserInteracting = false;
+  map.on('dragstart', () => isUserInteracting = true);
+  map.on('zoomstart', () => isUserInteracting = true);
+  map.on('touchstart', () => isUserInteracting = true);
+  map.on('dragend', () => setTimeout(() => isUserInteracting = false, 2000));
+  map.on('zoomend', () => setTimeout(() => isUserInteracting = false, 2000));
 
   map.on('load', () => {
     const tiles = [
@@ -101,7 +121,7 @@
     });
   });
 
-    const markers = [
+  const markers = [
     { lng: 126.79009, lat: 37.50089, img: 'st1.png', title: '해봄정원', url: 'https://botanicpark.seoul.go.kr/front/main.do' },
     { lng: 126.79139, lat: 37.50200, img: 'on1.png', title: '식물문화센터' },
     { lng: 126.78976, lat: 37.50240, img: 'gold1.png', title: '거인의 정원' },
@@ -109,62 +129,58 @@
   ];
 
   const markerElements = [];
+  let userMarker = null;
+  let currentPopup = null;
 
   markers.forEach(m => {
     const el = document.createElement('div');
     el.className = 'custom-marker';
-    el.style.backgroundImage = `url(${m.img})`;
-    el.style.width = '75px';
-    el.style.height = '75px';
-    el.style.display = 'none';
+
+    const inner = document.createElement('div');
+    inner.className = 'marker-inner';
+    inner.style.backgroundImage = `url(${m.img})`;
+    el.appendChild(inner);
 
     const popupHTML = `
-      <div class="popup-content" ${m.url ? `onclick=\"window.open('${m.url}', '_blank')\"` : ''}>
+      <div class="popup-content" ${m.url ? `onclick="window.open('${m.url}', '_blank')"` : ''}>
         ${m.title}
       </div>
     `;
 
-    const marker = new mapboxgl.Marker(el)
+    const popup = new mapboxgl.Popup({ offset: [0, -50] }).setHTML(popupHTML);
+    el.addEventListener('click', () => popup.setLngLat([m.lng, m.lat]).addTo(map));
+    el.addEventListener('touchstart', () => popup.setLngLat([m.lng, m.lat]).addTo(map));
+
+    new mapboxgl.Marker(el, { offset: [0, -37.5] })
       .setLngLat([m.lng, m.lat])
-      .setPopup(new mapboxgl.Popup({ offset: 25 }).setHTML(popupHTML))
+      .setPopup(popup)
       .addTo(map);
 
-    markerElements.push(el);
+    markerElements.push({ el, inner, lng: m.lng, lat: m.lat });
   });
-
-  map.on('zoom', () => {
-    const zoom = map.getZoom();
-    markerElements.forEach(el => {
-      el.style.display = (zoom >= 16) ? 'block' : 'none';
-    });
-    if (userMarker) {
-      const userLngLat = userMarker.getLngLat();
-      showPopupIfNearby(userLngLat.lng, userLngLat.lat);
-    }
-  });
-
-  let userMarker = null;
-  let currentPopup = null;
 
   function showPopupIfNearby(userLng, userLat) {
     const zoom = map.getZoom();
     let nearby = false;
 
     if (zoom < 16) {
-      if (currentPopup) {
-        currentPopup.remove();
-        currentPopup = null;
-      }
+      markerElements.forEach(m => m.el.style.display = 'none');
+      markerElements.forEach(m => m.inner.classList.remove('bounce'));
+      if (currentPopup) currentPopup.remove();
+      currentPopup = null;
       return;
     }
 
-    markers.forEach((m, i) => {
+    markerElements.forEach(m => {
+      m.el.style.display = 'block';
+      m.inner.classList.remove('bounce');
+
       const distance = turf.distance([userLng, userLat], [m.lng, m.lat], { units: 'meters' });
 
-      const el = markerElements[i];
+      if (distance < 100) m.inner.classList.add('bounce');
+
       if (distance < 70) {
         nearby = true;
-
         if (!currentPopup || currentPopup._lngLat.lng !== m.lng) {
           if (currentPopup) currentPopup.remove();
           const popupHTML = `
@@ -172,7 +188,7 @@
               ${m.title}
             </div>
           `;
-          currentPopup = new mapboxgl.Popup()
+          currentPopup = new mapboxgl.Popup({ offset: [0, -50] })
             .setLngLat([m.lng, m.lat])
             .setHTML(popupHTML)
             .addTo(map);
@@ -188,21 +204,33 @@
 
   navigator.geolocation.watchPosition((position) => {
     const { latitude, longitude } = position.coords;
-    map.easeTo({
-      center: [longitude, latitude],
-      duration: 1000
-    });
+
+    if (!isUserInteracting) {
+      map.easeTo({ center: [longitude, latitude], duration: 1000 });
+    }
+
     if (!userMarker) {
       const el = document.createElement('div');
       el.className = 'custom-marker';
-      el.style.backgroundImage = 'url(dung1.gif)';
-      userMarker = new mapboxgl.Marker(el).setLngLat([longitude, latitude]).addTo(map);
+      const inner = document.createElement('div');
+      inner.className = 'marker-inner';
+      inner.style.backgroundImage = 'url(dung1.gif)';
+      el.appendChild(inner);
+
+      userMarker = new mapboxgl.Marker(el, { offset: [0, -37.5] })
+        .setLngLat([longitude, latitude])
+        .addTo(map);
     } else {
       userMarker.setLngLat([longitude, latitude]);
     }
+
     showPopupIfNearby(longitude, latitude);
   }, (error) => {
     console.error("Geolocation error:", error);
+  }, {
+    enableHighAccuracy: true,
+    maximumAge: 10000,
+    timeout: 10000
   });
 </script>
 </body>
